fix: fixed jumping of hero section

--- a/src/pages/HomePage/Styles/Hero.module.scss
+++ b/src/pages/HomePage/Styles/Hero.module.scss
@@ -7,7 +7,7 @@
   justify-content: space-between;
   padding: 48px 120px;
   background: #000;
-  min-height: 100vh;
+  min-height: 128vh;
 
   @include md() {
     padding: 0 pixRem(72);
@@ -18,6 +18,7 @@
     justify-content: center;
     row-gap: 42px;
     padding: 20px 22px 32px 22px;
+    min-height: 100vh;
   }
 
   .left_side_container {
